--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
